--- a/index.html
+++ b/index.html
@@ -6,12 +6,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>AI研社 - 发现新可能</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            animation: {
+              'fade-in': 'fadeIn 0.5s ease-out',
+              'fade-in-up': 'fadeInUp 0.5s ease-out',
+              'scale-in': 'scaleIn 0.3s ease-out',
+            },
+            keyframes: {
+              fadeIn: {
+                '0%': { opacity: '0' },
+                '100%': { opacity: '1' },
+              },
+              fadeInUp: {
+                '0%': { opacity: '0', transform: 'translateY(10px)' },
+                '100%': { opacity: '1', transform: 'translateY(0)' },
+              },
+              scaleIn: {
+                '0%': { opacity: '0', transform: 'scale(0.9)' },
+                '100%': { opacity: '1', transform: 'scale(1)' },
+              },
+            },
+          },
+        },
+      }
+    </script>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <style>
       body {
         font-family: 'Plus Jakarta Sans', system-ui, -apple-system, "PingFang SC", "Microsoft YaHei", sans-serif;
-        background-color: #f8fafc; /* Slate-50, very clean white-grey */
-        /* Lab-like cool gradients: Cyan, Blue, and a hint of Violet */
+        background-color: #f8fafc;
         background-image: 
             radial-gradient(at 0% 0%, rgba(34, 211, 238, 0.08) 0px, transparent 50%),
             radial-gradient(at 100% 0%, rgba(59, 130, 246, 0.08) 0px, transparent 50%),
@@ -19,7 +45,6 @@
         background-attachment: fixed;
         -webkit-tap-highlight-color: transparent;
       }
-      /* Hide scrollbar for clean mobile look but allow scrolling */
       .no-scrollbar::-webkit-scrollbar {
         display: none;
       }
@@ -31,10 +56,10 @@
   <script type="importmap">
 {
   "imports": {
-    "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "lucide-react": "https://esm.sh/lucide-react@^0.562.0"
+    "react": "https://esm.sh/react@18.2.0",
+    "react-dom/": "https://esm.sh/react-dom@18.2.0/",
+    "react/": "https://esm.sh/react@18.2.0/",
+    "lucide-react": "https://esm.sh/lucide-react@0.292.0"
   }
 }
 </script>
