--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
     "react": "https://esm.sh/react@18.2.0",
     "react-dom/": "https://esm.sh/react-dom@18.2.0/",
     "react/": "https://esm.sh/react@18.2.0/",
-    "lucide-react": "https://esm.sh/lucide-react@0.292.0"
+    "lucide-react": "https://esm.sh/lucide-react@0.292.0",
+    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.39.3"
   }
 }
 </script>
 </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
